# python-codemods

./: .flake8  .libcst.codemod.yaml  .travis.yml  LICENSE  Makefile  README.md  mod  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: dependabot.yml
.github/workflows/: test.yml
codemods/: constant_folding.py  mypy.py  wx_python.py  wxpython.py
codemods/wx_python_2_to_4/: colour_to_color.py
tests/: constant_folding_test.py  mypy_test.py  wx_python_test.py  wxpython_test.py
tests/wx_python_2_to_4/: colour_to_color_test.py
