[tool.black]
line-length = 99
target-version = ["py36", "py37", "py38", "py39"]
exclude = '''
/(
    \.git|venv|.venv
)/
'''

[tool.isort]
profile = "black"
float_to_top = true
line_length = 79
skip_glob = ".venv,venv"

[tool.poetry]
name = "python-codemods"
version = "0.1.0"
description = ""
authors = ["Daniele Esposti"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
libcst = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3"
flake8 = "^5.0.4"
isort = "<5.12"
mypy = "^1.2"
pdbpp = "^0.10.3"
pytest = "^7.3.1"
autoflake = "^1.7"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
